@@ -54,11 +54,6 @@
       <!-- attendees -->
       <md-list-item ng-repeat="currentAttendee in editor.component.attendees track by currentAttendee.email">
         <md-button class="md-icon-button"
-                   label:aria-label="Delete"
-                   ng-click="editor.removeAttendee(currentAttendee, eventForm)">
-          <md-icon>remove_circle</md-icon>
-        </md-button>
-        <md-button class="md-icon-button"
                    label:aria-label="Role"
                    ng-click="editor.component.$attendees.nextRole(currentAttendee)"
                    ng-switch="currentAttendee.role">
@@ -70,11 +65,16 @@
         </md-button>
         <sg-avatar-image class="md-avatar"
                          sg-email="currentAttendee.email"
-                         size="40">person</sg-avatar-image>
+                         size="40">{{ editor.defaultIconForAttendee(currentAttendee) }}</sg-avatar-image>
         <div class="sg-tile-content sg-padded--right">
           <div class="sg-md-subhead"><div>{{currentAttendee.name}}</div></div>
           <div class="sg-md-body"><div>{{currentAttendee.email}}</div></div>
         </div>
+        <md-button class="md-icon-button"
+                   label:aria-label="Delete"
+                   ng-click="editor.removeAttendee(currentAttendee, eventForm)">
+          <md-icon>close</md-icon>
+        </md-button>
         <md-divider><!-- divider --></md-divider>
       </md-list-item>
     </md-list>
